--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ permalink: /:title
 title: fusluv
 url: http://fusluv.github.io
 feed: /atom.xml
-author_info: <a href="http://fusluv.github.io/">BeiYuu</a>
+author_info: <a href="http://fusluv.github.io/">fusluv</a>
